# helper

./: README.md  cmpWidget.ui  pyproject.toml  test.py  test1.py  test2.py  trans_import.py
src/helper/: App.py  __main__.py
src/helper/UI/: CheckWindow.py  CompareWindow.py  CutomWidgets.py  MainWindow.py  SideBar.py  Ui_AboutDialog.py  Ui_CmpWidget.py  Ui_MainWindow.py  Ui_RefDialog.py  Ui_SearchDialog.py  Window.py  _AboutDialog.py  _CmpWidget.py  _MainWindow.py  _ScrolledText.py  _Style.py  __init__.py  aboutDialog.ui  cmpWidget.ui  mainWindow.ui  refDialog.ui  resources.qrc  resources_rc.py  searchDialog.ui
src/helper/assets/: __init__.py
src/helper/models/: ClaimModel.py  CmpModel.py  NLPModel.py  SearchModel.py  __init__.py
tests/: claims.txt  conftest.py
tests/claims_set/: claims1.txt
tests/unit/: test_claim.py  test_search.py
