[project]
name = "helper"
version = "0.1.0"
description = "This is a helper for patent examination."
authors = [{ name = "chenyulue", email = "chenyulue@163.com" }]
dependencies = [
    "pyqt5>=5.15.11",
    "pyqt5-qt5==5.15.2",
    "PyQtDarkTheme-fork>=2.3.2",
]
requires-python = ">=3.11,<3.13"
readme = "README.md"
license = { text = "MIT" }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.scripts]
build_resource = "pyrcc5 -o src/helper/UI/resources_rc.py src/helper/UI/resources.qrc"
build_mainwindow = "pyuic5 -o src/helper/UI/Ui_MainWindow.py src/helper/UI/mainWindow.ui"
build_dialog = "pyuic5 -o src/helper/UI/Ui_AboutDialog.py src/helper/UI/aboutDialog.ui"
build_cmpwindow = "pyuic5 -o src/helper/UI/Ui_CmpWidget.py src/helper/UI/cmpWidget.ui "
build_ui = {composite = ["build_resource", "build_mainwindow", "build_dialog", "build_cmpwindow"]}

[tool.pdm.dev-dependencies]
test = [
    "pytest>=8.3.3",
]
package = [
    "cx-Freeze>=7.2.5",
]
design = [
    "pyqt5-qt5-designer>=0.0.14",
]
[tool.cxfreeze]
executables = [
    { script = "src/helper/__main__.py", base = "gui", target_name = "helper", icon = "./src/helper/assets/icons/APP-ICON.ico" },
]
